--- a/IAB330/Resources/layout/Main.axml
+++ b/IAB330/Resources/layout/Main.axml
@@ -4,4 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:minWidth="25px"
-    android:minHeight="25px" />
+    android:minHeight="25px">
+    <RelativeLayout
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/BG_Layout">
+        <ImageButton
+            android:src="@android:drawable/ic_menu_gallery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/TapToStart"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:minHeight="200dp"
+            android:minWidth="200dp" />
+    </RelativeLayout>
+</LinearLayout>
