--- a/IAB330/Resources/layout/Main.axml
+++ b/IAB330/Resources/layout/Main.axml
@@ -20,5 +20,13 @@
             android:layout_centerHorizontal="true"
             android:minHeight="200dp"
             android:minWidth="200dp" />
+        <TextView
+            android:text="Medium Text"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/TapToStart"
+            android:id="@+id/ModText"
+            android:layout_centerHorizontal="true" />
     </RelativeLayout>
 </LinearLayout>
