UI screens have been touched up.  Added ListViews to UI-Activity code so they can be properly visualised when run through an emulator.  All screens are working and can be visited when using the emulator.

--- a/IAB330/Resources/layout/L_01_Splash.axml
+++ b/IAB330/Resources/layout/L_01_Splash.axml
@@ -7,6 +7,7 @@
     p1:layout_height="match_parent"
     p1:id="@+id/BG"
     p1:background="@android:color/background_light">
+  <!-- 01_Splash Designed by John McLay - n5767148 -->
     <ImageView
         p1:src="@drawable/im_01_bg"
         p1:layout_width="match_parent"
