--- a/IAB330/Resources/layout/L_04_02_AnswerRequest.axml
+++ b/IAB330/Resources/layout/L_04_02_AnswerRequest.axml
@@ -10,7 +10,8 @@
         android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="50.0dp"
-        android:id="@+id/relativeLayout1">
+        android:id="@+id/relativeLayout1"
+        android:background="@color/theme_custom_background">
         <ImageView
             android:src="@drawable/mercury_title"
             android:layout_width="wrap_content"
@@ -24,17 +25,20 @@
         android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:id="@+id/relativeLayout2" />
+        android:id="@+id/relativeLayout2"
+        android:background="@color/theme_custom_background" />
     <RelativeLayout
         android:minWidth="25px"
         android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:id="@+id/UserRequest_Container" />
+        android:id="@+id/UserRequest_Container"
+        android:background="@color/theme_custom_background" />
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:id="@+id/relativeLayout3">
+        android:id="@+id/relativeLayout3"
+        android:background="@color/theme_custom_background">
         <ImageView
             android:src="@drawable/profile_01"
             android:layout_width="50dp"
@@ -73,7 +77,8 @@
         android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/relativeLayout5">
+        android:id="@+id/relativeLayout5"
+        android:background="@color/theme_custom_background">
         <RelativeLayout
             android:minWidth="25px"
             android:minHeight="25px"
@@ -96,7 +101,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/relativeLayout6">
+        android:id="@+id/relativeLayout6"
+        android:background="@color/theme_custom_background">
         <RelativeLayout
             android:minWidth="25px"
             android:minHeight="25px"
@@ -126,7 +132,8 @@
         android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/relativeLayout7">
+        android:id="@+id/relativeLayout7"
+        android:background="@color/theme_custom_background">
         <RelativeLayout
             android:minWidth="25px"
             android:minHeight="25px"
@@ -149,7 +156,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/relativeLayout8">
+        android:id="@+id/relativeLayout8"
+        android:background="@color/theme_custom_background">
         <RelativeLayout
             android:minWidth="25px"
             android:minHeight="25px"
@@ -179,7 +187,8 @@
         android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/relativeLayout9">
+        android:id="@+id/relativeLayout9"
+        android:background="@color/theme_custom_background">
         <RelativeLayout
             android:minWidth="25px"
             android:minHeight="25px"
@@ -202,7 +211,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/relativeLayout10">
+        android:id="@+id/relativeLayout10"
+        android:background="@color/theme_custom_background">
         <RelativeLayout
             android:minWidth="25px"
             android:minHeight="25px"
@@ -232,13 +242,15 @@
         android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/relativeLayout11" />
+        android:id="@+id/relativeLayout11"
+        android:background="@color/theme_custom_background" />
     <RelativeLayout
         android:minWidth="25px"
         android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/relativeLayout15">
+        android:id="@+id/relativeLayout15"
+        android:background="@color/theme_custom_background">
         <Button
             android:text="SEND"
             android:layout_width="125dp"
