--- a/IAB330/Resources/layout/L_01_Splash.axml
+++ b/IAB330/Resources/layout/L_01_Splash.axml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- 01_Splash - Designed by John McLay - n5767148-->
 <LinearLayout xmlns:p1="http://schemas.android.com/apk/res/android"
     p1:orientation="vertical"
     p1:minWidth="25px"
@@ -7,7 +8,6 @@
     p1:layout_height="match_parent"
     p1:id="@+id/BG"
     p1:background="@android:color/background_light">
-  <!-- 01_Splash Designed by John McLay - n5767148 -->
     <ImageView
         p1:src="@drawable/im_01_bg"
         p1:layout_width="match_parent"
